== 0.4.1 / 2009-03-23

* Simplified internal API for nesting (removed initialize_<key>)
* Added :hidden option type to prevent declaration of an option
* Refactored :map_default attribute to :set_default
* Made OrderedHashPatch preserve order when serialized as YAML

== 0.4.0 / 2009-03-05

Reworked nesting.  Changes are not backward compatible.

* Nesting syntax reworked
* Delegates no longer accept nil reader/writers

== 0.3.0 / 2009-02-17

Significant rework of the 0.1.0 release:

* Added CDoc
* Expanded use of nested configs
* Added dumping of configs for config files
* Updates to Range/Regexp validations
* Numerous bug fixes